# bmi-prms6-groundwater

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
bmi_prms_groundwater/: bmi_prms6_groundwater.sln
bmi_prms_groundwater/Lib1/: Lib1.vfproj
bmi_prms_groundwater/bmi_prms_groundwater/: bmi_prms_groundwater.vfproj
bmi_prms_groundwater/irf_ex/: .gitignore  irf_ex.vfproj
examples/: irf_ex.f90
notebooks/: prms_and_bmi_compare.ipynb
src/: CMakeLists.txt  bmi.f90  bmi_prms_groundwater.f90  m_prms_groundwater.f90
tests/: CMakeLists.txt  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_edge_count.f90  test_get_grid_edge_nodes.f90  test_get_grid_face_count.f90  test_get_grid_face_edges.f90  test_get_grid_face_nodes.f90  test_get_grid_node_count.f90  test_get_grid_nodes_per_face.f90  test_get_grid_origin.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_spacing.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_y.f90  test_get_grid_z.f90  test_get_input_item_count.f90  test_get_input_var_names.f90  test_get_output_item_count.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_var_grid.f90  test_get_var_itemsize.f90  test_get_var_location.f90  test_get_var_nbytes.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_set_value_at_indices.f90  (+2 more)
(+7 files in other folders)
